packages/app/web/css/ui.css
/* ... */
sidecar.minimized [data-balloon]:before, sidecar.minimized [data-balloon]:after {
    opacity: 0;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
.fade-in {
    animation: fadein 1s ease-in-out;
}

/* grabbable elements */
.grabbable {
    cursor: -webkit-grab;
}
.grabbable:active {
    cursor: -webkit-grabbing;
}

.capitalize {
    text-transform: capitalize;
}

/* usage */
.usage-error-wrapper .hideable {
    margin: 1em 0;
    border: 1px solid var(--color-ui-04);
    padding: 1em 2em;
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
    background: var(--color-ui-02);
    color: initial;
}
sidecar .usage-error-wrapper .hideable {
    background: var(--color-ui-03);
}
.usage-error-wrapper h2, .usage-error-wrapper h4 {
    font-weight: 300;
    font-size: 1.125em;
    color: var(--color-brand-01);
    font-family: var(--font-sans-serif);
}
.usage-error-wrapper h2 {
    text-transform: capitalize;
    margin: 0 0 0.375em;
}
.usage-error-wrapper h4 {
    margin: 1.33em 0 0.375em;
}
.bx--breadcrumb {
    display: flex;
    flex-wrap: wrap;
    font-size: 1.5em;
    font-family: var(--font-sans-serif);
    margin-bottom: calc(0.875em);
    margin-top: 0; /* override h1 defaults */
}
.bx--breadcrumb-item {
    margin-right: 1rem;
    display: flex;
    align-items: center;
    color: var(--color-brand-01);
}
.bx--breadcrumb-item--slash {
    margin-left: 1rem;
    color: var(--color-text-02);
}
.bx--breadcrumb--no-trailing-slash .bx--breadcrumb-item:last-child .bx--breadcrumb-item--slash {
    display: none;
}
.bx--breadcrumb .bx--link:hover {
    cursor: pointer;
    opacity: 1;
}
.bx--breadcrumb .bx--link:hover, .bx--breadcrumb .bx--link:focus {
    outline: none;
    color: var(--color-band-01);
    border-bottom: 1px solid var(--color-brand-01);
}
.bx--breadcrumb .bx--link, .bx--breadcrumb .bx--no-link {
    border-bottom: none;
    white-space: nowrap;
    font-weight: 300;
    text-decoration: none;
    border-bottom: 1px solid transparent;
    transition: 250ms;
}
.bx--breadcrumb .bx--link {
    opacity: 0.8;
}
.bx--breadcrumb .bx--no-link:not(.bx--link) {
    font-weight: 400;
}

/* markdown */
.page-content {
    flex: 1;
}
.page-content img {
    max-width: 100%;
}
.page-content img[align="right"] {
    padding-left: 20px;
}
.page-content p {
    font-weight: 400;
    line-height: 1.5em;
    padding: 0 0 0.5rem;
}
.page-content h1 {
    font-size: 3.375rem;
    font-weight: 300;
    letter-spacing: 0;
    line-height: 1.25;
    margin: -1.15rem 0 0 -3px;
    padding: 0;
    transition: .25s cubic-bezier(.5,0,.1,1);
}
.page-content h2, .page-h2 {
    font-size: 1.75rem;
    font-weight: 300;
    margin-top: 3rem;
    padding: 1rem 0 1.5rem;
    position: relative;
    line-height: 1.25;
}
.page-content h2::before, .page-h2::before {
    background-color: var(--color-carbon-components-h3);
    content: "";
    display: block;
    height: .3rem;
    left: 0;
    position: absolute;
    top: -.5rem;
    width: 5rem;
}
.page-content h3:first-child, .page-content h2:first-child, .page-content hr + h3 {
    padding-top: 0;
}
.page-content h3, .page-h3 {
    color: var(--color-carbon-components-h3);
    font-size: 1.125rem;
    font-weight: 600;
    letter-spacing: 0;
    padding: 1rem 0 1rem;
    line-height: 1.25em;
}
.page-content ol, .page-content ul {
    font-size: 1rem;
    line-height: 1.75;
    margin: 1rem 0 1rem 1.5rem;
    margin-top: 1rem;
}
.page-content li {
    font-weight: 400;
    padding-left: .25rem;
    list-style-type: disc;
}
sidecar .page-content pre > code {
    display: inline-block;
}

.icon-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.icon-container .deemphasize {
    white-space: nowrap;
    font-size: 0.5em;
    margin-top: 0.5ex;
}

body {
    font-family: var(--font-sans-serif);
    background: var(--color-ui-01);
    color: var(--color-text-01);
}

body a {
    color: var(--color-brand-01);
}
body a:hover:not(.plain-anchor) {
    color: var(--color-support-04);
}

.header {
    background: var(--color-stripe-01);
    color: var(--color-ui-01);
}
.header .application-name .bx--global-header__title--current-page {
    color: var(--color-support-04);
}

.repl-block.valid-response .ok, .green-text, .dragover .ok-text-on-dragover {
    color: var(--color-support-02);
}

badge {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: 600;

    /* in tandem with the ::first-letter rule immediately below, this gives us DEPLOYED -> Deployed */
    text-transform: lowercase;
    display: inline-block; /* <-- the trick requires block or inline-block */
    vertical-align: middle; /* <-- then, inline-block requires this */
}
badge::first-letter {
    /* see the "in tandem" note immediately above */
    text-transform: uppercase;
}
badge.green-background {
    background: var(--color-support-02);
    color: var(--color-ui-01);
}
badge.yellow-background, button.yellow-background {
    background: var(--color-support-03);
    color: var(--color-text-01);
}
badge.red-background {
    background: var(--color-support-01);
    color: var(--color-ui-01);
}
badge.gray-background {
    background: var(--color-ui-05);
    color: var(--color-ui-02);
}

.oops.oops-as-html {
    color: unset !important;
}
.repl-block.valid-response .oops, sidecar.rule-enabled-false .sidecar-header-icon, .repl-block.error .oops, .clickable.oops, .oops .oops-text-on-oops, .red-text {
    color: var(--color-support-01);
}
.yellow-text {
    color: var(--color-support-03-darker);
}

sidecar.activation-success-false .sidecar-header-icon, span[data-extra-decoration="application error"] {
    color: var(--color-support-01-lighter);
}

.repl-block.processing .repl-input input {
    color: hsla(194, 71%, 40%, 1);
}

.repl-result-prefix, badge {
    background-color: hsl(203, 43%, 15%);
    color: rgba(255,255,255,0.8);
    font-family: var(--font-sans-serif);
}
/* ... */

